# file_auto_pipeline

./: .dockerignore  .env.example  .gitignore  ADR-0001.md  ADR-0002.md  ADR-0003.md  AGENTS.md  Dockerfile  README.md  default.yaml  definition.yaml  docker-compose.yml  pixi.toml  production.yaml  pyproject.toml  runbook.md  spec-v2.md  spec.md
.claude/: settings.local.json
.github/workflows/: ci.yml
docs/: DESIGN_CHANGES_QUICK_REFERENCE.md  DESIGN_SYSTEM.md  DESIGN_SYSTEM_IMPLEMENTATION.md  USER_GUIDE.md
jobs/: .gitkeep
jobs/JOB-01A81E8E/inputs/: intake_session.json
jobs/JOB-07D5C0DA/inputs/: intake_session.json
jobs/JOB-0865F795/inputs/: intake_session.json
jobs/JOB-0912B2F5/inputs/: intake_session.json
jobs/JOB-0DC2568C/inputs/: intake_session.json
jobs/JOB-1089341E/inputs/: intake_session.json
jobs/_sessions/: 092469da-86c5-42c4-b51e-cdb0efd3267e.json  5d2c5afa-4f84-45a9-89d6-87cfe66a22ee.json  8452beac-7a5d-4dbf-bca2-d61d3a9df80d.json  da19ad0f-9ffd-42b0-8af7-ea088c0bf901.json  e655c338-1249-454b-9024-d021cb3775f7.json
prompts/: extract_fields.txt
scripts/: purge_trash.py  test_api_connection.py
src/: __init__.py
src/app/: __init__.py  main.py
src/core/: __init__.py  hashing.py  ids.py  logging.py  photos.py  ssot_job.py
src/domain/: __init__.py  constants.py  errors.py  schemas.py
src/render/: __init__.py  excel.py  word.py
src/templates/: __init__.py  manager.py  scaffolder.py
src/testing/: __init__.py
src/utils/: retry.py
templates/base/: manifest.yaml  measurements_template.xlsx  report_template.docx
templates/custom/: .gitkeep
templates/with_photos/: report_template.docx
tests/: conftest.py
tests/e2e/: __init__.py  conftest.py  test_api_chat.py  test_api_generate.py  test_api_templates.py  test_browser.py
tests/golden/: __init__.py  test_golden.py
tests/integration/: __init__.py  test_chat_to_document.py  test_pipeline_flow.py
(+141 files in other folders)
